--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@types/xmldom": "^0.1.31",
     "dice-similarity-coeff": "^1.1.1",
     "discord.js": "^14.0.3",
     "dotenv": "^16.0.0",
@@ -7,7 +8,9 @@
     "pg": "^8.7.3",
     "pm2": "^5.3.0",
     "typescript": "^4.6.4",
-    "xml2js": "^0.5.0"
+    "xml2js": "^0.5.0",
+    "xmldom": "^0.6.0",
+    "xpath": "^0.0.32"
   },
   "devDependencies": {
     "@types/node": "^17.0.33",
