--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@types/xmldom": "^0.1.31",
+    "@vitalets/google-translate-api": "^9.2.0",
     "dice-similarity-coeff": "^1.1.1",
     "discord.js": "^14.0.3",
     "dotenv": "^16.0.0",
