Молчи, всё не вечно, всё неважно

--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -33,6 +33,9 @@ jobs:
       # with sigstore/fulcio when running outside of PRs.
       id-token: write
 
+    environment:
+      name: Docker
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
