--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.0"
 
 services:
   trakman:
-    image: borecek/trakman:main
+    image: borecek/trakman-fork:main
     container_name: trakman-server
     restart: unless-stopped
     volumes:
